--- a/src/components/TaskCard/index.css
+++ b/src/components/TaskCard/index.css
@@ -1,19 +1,66 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap'); 
 
 
-#container{
-    background-color: #17a2b8!important;
+#containes{
+    background-color: #17a3b8cb!important;
     border-radius: 20px;
     color : white;
     font-family: 'Montserrat Alternates', sans-serif;
-    height:  150px;
+    height:  100px;
     align-items: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
 
-#container>a{
+#containes>a{
 color: aliceblue;    text-decoration: none;
 }
+#citas{
+    background-color: #17a3b8cb!important;    height: 180px;
+    width: 350px;
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+    border-radius: 20px;
+    
+}
 
-#container>div>input{
+
+
+h4{
+    font-weight: bold;
+    font-family: 'Gemunu Libre', sans-serif;
+
+
+}
+a{
+    text-decoration: none;
+}
+
+h3{
+
+
+ 
+    font-family: 'Montserrat Alternates', sans-serif;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    display: flex;
+
+    border-radius: 20px;
+    color:black;
+    margin: auto;
+    justify-content: center;
+    font-family: 'Gemunu Libre', sans-serif;
+    font-weight: bold;
     margin-bottom: 10px;
+
+}
+
+
+#preguntas{
+    width: 90%;
+    margin: auto;
 }
