--- a/src/pages/Home2/estilo.css
+++ b/src/pages/Home2/estilo.css
@@ -126,6 +126,18 @@ textarea, select, input, button {
 	right: 0;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+} 
+::-webkit-scrollbar-thumb {
+    background-color: #212529;
+} 
+
 .flex-direction-nav a:before {
   font-family: "flexslider-icon";
   font-size: 40px;
@@ -386,36 +398,6 @@ background-color: #18191a;
           
      
  }
-
- .galera::-webkit-scrollbar {
-    -webkit-appearance: none;
-}
-
-.galera::-webkit-scrollbar:horizontal {
-    width: 40px;
-  
-}
-
-.galera::-webkit-scrollbar-button:increment,.galera::-webkit-scrollbar-button {
-    display: none;
-} 
-
-.galera::-webkit-scrollbar:horizontal {
-    height: 10px;
-    padding: 10px;
-}
-
-.galera::-webkit-scrollbar-thumb {
-    background-color: #797979;
-    border-radius: 20px;
-    border: 2px solid #f1f2f3;
-}
-
-.galera::-webkit-scrollbar-track {
-    border-radius: 10px;  
-    background-color: rgb(253, 55, 104);
-}
-
 .fondoSlide{
     background-color: black;
 }
