--- a/src/components/TaskCard/index.css
+++ b/src/components/TaskCard/index.css
@@ -29,6 +29,7 @@ color: aliceblue;    text-decoration: none;
 
 
 h4{
+    text-align: center;
     font-weight: bold;
     font-family: 'Gemunu Libre', sans-serif;
 
