--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -1,5 +1,5 @@
 #navi>h4{
-  font-family: 'Gemunu Libre', sans-serif;}
+  font-family: 'Poppins', sans-serif;}
 @media (min-width=1000px){
     #navnavbarTogglerDemo03{
       display: flex;
