--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -4,12 +4,14 @@
 
 
 #titulo{
-    background-color: rgba(255, 149, 0, 0.64);
+
+    background-color: rgba(12, 248, 170, 0.694) ;
     border-radius: 20px;
     color : white;
     font-family: 'Lalezar', cursive;
     height:  50px;
     align-items: center;
+    padding-top: 50px !important;
 }
 
 #titulo>h2{
@@ -17,4 +19,5 @@
     align-items: center;
     text-align: center;    
     padding-top: 5px;
+  
 }
