--- a/src/pages/Home2/estilos.css
+++ b/src/pages/Home2/estilos.css
@@ -5,7 +5,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&family=Open+Sans:wght@300&family=Outfit:wght@300&family=Raleway:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200;800&display=swap');
 							
-
+#titulo{
+    padding-top: 20px;
+}
 
 
 #titulo>h2{
@@ -14,12 +16,13 @@
     align-items: center;
     text-align: center;    
     padding-top: 5px;
-    font-family: 'Montserrat Alternates', sans-serif;
-    background-color: rgba(255, 149, 0, 0.64);
-    border-radius: 20px;
+    font-family: 'Gemunu Libre', sans-serif;
+    background-color: rgba(12, 248, 170, 0.694) ;
+        border-radius: 20px;
     align-items: center;
-    color: white;
+    color: black;
     justify-content: center;
+    font-weight: bold;
 
 }
 
